feat: overhaul java-best-practices with modern Java pattern references
- Add 12 new detailed reference guides for language, collections, streams, concurrency,
  io, strings, errors, datetime, security, and tooling, each mapping classic vs.
  modern Java (JDK 8-25), with "old vs. new" code samples and usage guidance
- Replace legacy java.instructions.md with specialized code-quality.md and targeted
  references for static analysis, naming, code smells, and code review checklists
- Rewrite SKILL.md to provide JDK-versioned pattern routing, reference summaries,
  and maintain user-friendly quick starts for JDK upgrades, modern features, and
  exception strategy
- Expand quick references, clarify when to use each pattern, and augment links to
  new per-domain guides
- Remove outdated Python scripts (quick_validate, init_skill, package_skill) in
  skill-creator as validation and packaging is now tool-managed
- Improve skillshare troubleshooting doc, targets reference, audit guide, and others
  to align with new features: target filtering, skill-level targets, audit config,
  and subdir resolution
- Remove skillshare/references/ui.md (migrated to CLI help and web UI)
- Update meta, status, and log docs for parity with new features

BREAKING CHANGE: legacy validation and init/package Python scripts are removed—use new built-in mechanisms for skill validation and packaging.